2010-10-12 Borut Razem <borut.razem AT siol.net>

	* device/lib/pic/Makefile.in, device/non-free/lib/pic/Makefile.in:
	  fixed target "all" if gputils not found

2010-10-11 Borut Razem <borut.razem AT siol.net>

	* doc/sdccman.lyx: fixes proposed by Sebastien Lorquet

2010-10-10 Borut Razem <borut.razem AT siol.net>

	* support/cpp/sdcpp-diagnostic.c, support/cpp/sdcpp.h:
	  define inhibit_warnings
	* src/SDCCmain.c: removed readCfgFile() call
	* support/scripts/sdcc.nsi:
	  added include/ds390/*.h and include/ds400/*.h to the package
	* src/regression/Makefile, src/regression/inline.c,
	  src/regression/string1.c: added non-free search path,
	  fixed deprecated keyword warnings
	* device/lib/Makefile.in device/non-free/lib/Makefile.in:
	  fixed bug #3084827:
	  Building fails at non-free when disabling PIC/PIC16

2010-10-09 Borut Razem <borut.razem AT siol.net>

	* support/cpp/auto-host_vc_in.h, support/cpp/libcpp/include/cpplib.h,
	  support/cpp/sdcpp-diagnostic.c:
	  fixed bug #3080422: #error not working as expected
	* src/SDCCmain.c, src/SDCCglobl.h:
	  --non-free and SDCC_NON_FREE changed to --use-non-free and
	  SDCC_USE_NON_FREE
	* doc/sdccman.lyx: documented --non-free
	* .version, sdcc.spec, doc/sdccman.lyx, doc/INSTALL.txt:
	  changed sdcc version to 3.0.0
	* src/SDCCmain.c: removed function readCfgFile()
	* support/scripts/repack_release.sh:
	  fixed typo

2010-10-08 Borut Razem <borut.razem AT siol.net>

	* sim/ucsim/s51.src/Makefile.in:
	  fixed bug 3082829: S51 is not installed in recent SDCC versions

2010-10-06 Borut Razem <borut.razem AT siol.net>

	* sdcc/configure, sdcc/configure.in:
	  show non-free search paths
	* support/scripts/sdcc_mingw32, support/scripts/sdcc_cygwin_mingw32:
	  define non_free_include_dir_suffix and non_free_lib_dir_suffix
	* support/scripts/sdcc.nsi:
	  remove non-free directory on uninstall
	* support/regression/ports/pic14/spec.mk,
	  support/regression/ports/pic16/spec.mk: