@@ -83,7 +83,7 @@ pic16_sectioninfo_t pic16_sectioninfo;
 
 extern char *pic16_processor_base_name(void);
 
-void  pic16_pCodeInitRegisters(void);
+void pic16_pCodeInitRegisters(void);
 
 void pic16_assignRegisters (ebbIndex *);
 
@@ -99,9 +99,8 @@ extern set *libFilesSet;
 /* for an unknowned reason. - EEP */
 void pic16_emitDebuggerSymbol (const char *);
 
-extern void pic16_emitConfigRegs(FILE *of);
-extern void pic16_emitIDRegs(FILE *of);
-
+extern void pic16_emitConfigRegs (FILE *of);
+extern void pic16_emitIDRegs (FILE *of);
 
 
 static void
@@ -137,11 +136,11 @@ _pic16_regparm (sym_link * l, bool reentrant)
 
 
 int initsfpnt=0;        /* set to 1 if source provides a pragma for stack
-                 * so glue() later emits code to initialize stack/frame pointers */
+                         * so glue() later emits code to initialize stack/frame pointers */
 set *absSymSet;
 
-set *sectNames=NULL;            /* list of section listed in pragma directives */
-set *sectSyms=NULL;         /* list of symbols set in a specific section */
+set *sectNames=NULL;    /* list of section listed in pragma directives */
+set *sectSyms=NULL;     /* list of symbols set in a specific section */
 set *wparamList=NULL;
 
 #if 0
@@ -167,7 +166,7 @@ enum {
 };
 
 static int
-do_pragma(int id, const char *name, const char *cp)
+do_pragma (int id, const char *name, const char *cp)
 {
   struct pragma_token_s token;
   int err = 0;
@@ -482,7 +481,7 @@ static struct pragma_s pragma_tbl[] = {
   };
 
 static int
-_process_pragma(const char *s)
+_process_pragma (const char *s)
 {
   return process_pragma_tbl(pragma_tbl, s);
 }
@@ -627,23 +626,10 @@ _pic16_parseOptions (int *pargc, char **argv, int *i)
 
 extern void pic16_init_pic(const char *name);
 
-static void _pic16_initPaths(void)
+static void
+_pic16_initPaths (void)
 {
-    set *pic16libDirsSet=NULL;
-
-    if (!options.nostdlib) {
-        struct dbuf_s pic16libDir;
-
-        dbuf_init(&pic16libDir, 128);
-        dbuf_makePath(&pic16libDir, LIB_DIR_SUFFIX, "pic16");
-        pic16libDirsSet = appendStrSet(dataDirsSet, NULL, dbuf_c_str(&pic16libDir));
-        dbuf_destroy(&pic16libDir);
-        mergeSets(&pic16libDirsSet, libDirsSet);
-        libDirsSet = pic16libDirsSet;
-    }
-
-    /* now that we have the paths set up... */
-    pic16_init_pic(port->processor);
+  pic16_init_pic(port->processor);
 }
 
 extern set *linkOptionsSet;
@@ -845,7 +831,8 @@ _pic16_getRegName (struct regs *reg)
 
 
 #if 1
-static  char *_pic16_mangleFunctionName(char *sz)
+static char *
+_pic16_mangleFunctionName (char *sz)
 {
 //  fprintf(stderr, "mangled function name: %s\n", sz);
 
@@ -918,7 +905,8 @@ _pic16_genIVT (struct dbuf_s * oBuf, symbol ** interrupts, int maxInterrupts)
 
 /* return True if the port can handle the type,
  * False to convert it to function call */
-static bool _hasNativeMulFor (iCode *ic, sym_link *left, sym_link *right)
+static bool
+_hasNativeMulFor (iCode *ic, sym_link *left, sym_link *right)
 {
   //fprintf(stderr,"checking for native mult for %c (size: %d)\n", ic->op, getSize(OP_SYMBOL(IC_RESULT(ic))->type));
   int symL, symR, symRes, sizeL = 0, sizeR = 0, sizeRes = 0;
